--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jfran03/HackChange#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.80.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
