--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5",
     "supabase": "^2.54.11"
   },
   "devDependencies": {
