--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jfran03/HackChange#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@supabase/supabase-js": "^2.80.0",
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
     "react": "^19.2.0",
