env vairable amplify for aws updates

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,10 @@ frontend:
         - npm ci
     build:
       commands:
+        - echo "VITE_SUPABASE_URL=$VITE_SUPABASE_URL" >> .env.production
+        - echo "VITE_SUPABASE_ANON_KEY=$VITE_SUPABASE_ANON_KEY" >> .env.production
+        - echo "VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID" >> .env.production
+        - echo "VITE_GOOGLE_CLIENT_SECRET=$VITE_GOOGLE_CLIENT_SECRET" >> .env.production
         - npm run build
   artifacts:
     baseDirectory: dist
