--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm install 20
-        - nvm use 20
-        - node --version
-        - npm ci
+        - npm install
     build:
       commands:
         - echo "VITE_SUPABASE_URL=$VITE_SUPABASE_URL" >> .env.production
